--- a/nb/parseCxSMILES.ipynb
+++ b/nb/parseCxSMILES.ipynb
@@ -71,7 +71,7 @@
     {
       "cell_type": "code",
       "source": [
-        "cxmol = cdk.fromSMILES(\"[H]C\\\\C=C\\\\CC(=O)O |Sg:n:1:x:ht,Sg:n:4:y:ht| x+y=17\")\n",
+        "cxmol = cdk.fromSMILES(\"[H]C\\\\C=C\\\\CC(=O)O |Sg:n:1:x:ht,Sg:n:4:y:ht|\")\n",
         "svg = j2p(cdk.asSVG(cxmol))\n",
         "display(IPython.display.SVG(svg))"
       ],
@@ -101,7 +101,7 @@
   ],
   "metadata": {
     "colab": {
-      "name": "ParseIUPACName.ipynb",
+      "name": "Parsing CxSMILES",
       "provenance": []
     },
     "language_info": {
