Added openjdk installation

--- a/nb/parseCxSMILES.ipynb
+++ b/nb/parseCxSMILES.ipynb
@@ -19,7 +19,7 @@
       },
       "outputs": [],
       "source": [
-        "!apt install maven"
+        "!apt install maven openjdk-11-jdk"
       ]
     },
     {
